# AIBigdataSogang

./: DataMaunal.doc  package-lock.json  package.json
shinhan_202510-submission/: .gitignore  README.md  main.py  pyproject.toml
shinhan_202510-submission/data/predictions/: prediction_summary.json
shinhan_202510-submission/data/processed/: feature_list.json  feature_name_mapping.json  interval_feature_list.json  preprocessing_metadata.json
shinhan_202510-submission/data/results/: high_risk_by_priority.json  risk_classification_results.csv
shinhan_202510-submission/models/: ensemble_best.pkl  ensemble_comparison.csv  ensemble_results.json  ensemble_stacking.pkl  feature_cols.pkl  final_results.json  lightgbm_baseline.pkl  threshold_optimization_results.json  xgboost_best.pkl  xgboost_decline_only.json  xgboost_decline_only_info.json  xgboost_selected_interval.json  xgboost_selected_interval.pkl  xgboost_selected_interval_info.json
shinhan_202510-submission/notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03-1_interval_pattern_features.ipynb  03_feature_engineering.ipynb  04-1_model_training_with_interval_feature.ipynb  04-2_simple_xgboost_decline_only.ipynb  04-3_xgboost_selected_interval_features.ipynb  04-4_threshold_optimization_all_interval.ipynb  04_model_training.ipynb  05-1_risk_classify.ipynb  05-2_risk_classify_interval.ipynb  05_risk_prediction.ipynb
shinhan_202510-submission/pipeline/: __init__.py
shinhan_202510-submission/pipeline/evaluation/: __init__.py  metrics.py
shinhan_202510-submission/scripts/: verify_no_leakage.py
(+36 files in other folders)
